--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,3 +35,6 @@ local_scheme = "node-and-date"
 search_parent_directories = true
 version_scheme = "no-guess-dev"
 fallback_version = "0.0.1"
+
+[project.scripts]
+paper-query-v0 = "paper_query.cli:paper_query_v0"
