--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,4 +37,4 @@ version_scheme = "no-guess-dev"
 fallback_version = "0.0.1"
 
 [project.scripts]
-paper-query-v0 = "paper_query.cli:paper_query_v0"
+paper-query-v0 = "paper_query.chatbots:paper_query_v0"
