--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,5 +37,6 @@ version_scheme = "no-guess-dev"
 fallback_version = "0.0.1"
 
 [project.scripts]
-paper-query-v0 = "paper_query:paper_query_v0"
-paper-query-v1 = "paper_query:paper_query_v1"
+chatbot = "paper_query:base_chatbot"
+paper-query = "paper_query:paper_query_chatbot"
+paper-query-plus = "paper_query:paper_query_plus_chatbot"
