--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,4 +40,4 @@ fallback_version = "0.0.1"
 chatbot = "paper_query:base_chatbot"
 paper-query = "paper_query:paper_query_chatbot"
 paper-query-plus = "paper_query:paper_query_plus_chatbot"
-code-query = "paper_query:code_query"
+code-query = "paper_query:code_query_chatbot"
