hybrid-query cli

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,3 +41,4 @@ chatbot = "paper_query:base_chatbot"
 paper-query = "paper_query:paper_query_chatbot"
 paper-query-plus = "paper_query:paper_query_plus_chatbot"
 code-query = "paper_query:code_query_chatbot"
+hybrid-query = "paper_query:hybrid_query_chatbot"
