--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ fallback_version = "0.0.1"
 [tool.pytest.ini_options]
 markers = [
     "integration: marks tests as integration (deselect with '-m \"not integration\"')",
+    "app: marks tests for streamlit app functionality (deselect with '-m \"not app\"')",
     "slow: marks tests as slow (deselect with '-m \"not slow\"')"
 ]
 
