--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,7 @@ jobs:
       run: |
         pip install -r requirements.in
         pip install -r requirements-dev.in
+        pip install -e .
         pre-commit install
     - name: Lint with pre-commit
       run: |
