--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,11 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.11"
+    - name: Set API keys
+      run: |
+        export OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+        export HUGGINGFACE_API_KEY=${{ secrets.HUGGINGFACE_API_KEY }}
+        export GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
     - name: Install dependencies
       run: |
         pip install -r requirements.in
