--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,17 +23,21 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.11"
-    - name: Set API keys
-      run: |
-        export OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
-        export HUGGINGFACE_API_KEY=${{ secrets.HUGGINGFACE_API_KEY }}
-        export GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
     - name: Install dependencies
       run: |
         pip install -r requirements.in
         pip install -r requirements-dev.in
         pip install -e .
         pre-commit install
+    - name: Set API keys
+      run: |
+        export OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+        export HUGGINGFACE_API_KEY=${{ secrets.HUGGINGFACE_API_KEY }}
+        export GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
+
+        echo "OPENAI_API_KEY=${OPENAI_API_KEY}"
+        python -c "import os; print(os.environ['OPENAI_API_KEY'])"
+
     - name: Lint with pre-commit
       run: |
         pre-commit run --files ./**/*
