--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,10 @@ version = "0.0"
 dynamic = ["readme", "dependencies", "optional-dependencies"]
 requires-python = ">=3.11"
 
+[tool.poetry.dependencies]  # for streamlit cloud deployment
+python = "^3.11"
+streamlit = "^1.44.1"
+
 [tool.setuptools.packages.find]
 where = ["src"]
 
